--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
     "jspdf": "^3.0.3",
+    "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
