--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "critters": "^0.0.23",
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
     "jspdf": "^3.0.3",
